# SDL2_Engine

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2main.cmake
lib/: Readme.txt
src/: CMakeLists.txt  Component.hpp  ComponentManager.hpp  ComponentManager.tpp  ContentManager.cpp  ContentManager.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EntityManager.tpp  Game.cpp  Game.hpp  GameObservers.cpp  GameObservers.hpp  GenericComponentManager.cpp  GenericComponentManager.hpp  GenericComponentManager.tpp  HelperTypes.hpp  Scene.cpp  Scene.hpp  Scene.tpp  TextureManager.cpp  TextureManager.hpp  Updatable.hpp  main.cpp
tests/: CMakeLists.txt  ECS.cpp
